--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>Emoji Finder</h1>
+        <p>Find emoji by keywords</p>
+    </header>
+    <main>
+        <input type="text" placeholder="Placeholder">
+        <section></section>
+    </main>
+    <footer>
+        <div>
+            <p>2022 © Made with love by me</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
