--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
             <p>2022 © Made with love by me</p>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
