--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <p>Find emoji by keywords</p>
     </header>
     <main>
-        <input type="text" placeholder="Placeholder">
+        <div class="input__wrapper">
+            <input type="text" placeholder="Placeholder">
+        </div>
         <section></section>
     </main>
     <footer>
